--- a/nosotros.html
+++ b/nosotros.html
@@ -4,16 +4,19 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Acerca de Nosotros</title>
-
+    <title>Nosotros</title>
+    <!-- iconos bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <!-- css bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <!-- fonts google-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Georama&family=Koulen&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Georama:wght@400;600&display=swap" rel="stylesheet">
+    <!-- css interno -->
     <link rel="stylesheet" href="./css/main.css">
 </head>
-
 
 <body>
     <!-- ================= NAVBAR ============== -->
@@ -43,8 +46,8 @@
             <div class="container">
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-6">
                     <!-- 1 Alexis -->
-                    <div class="col" style="margin-bottom: 1rem;">
-                        <div class="card card__team">
+                    <div class="col" style="margin-bottom: 2rem;">
+                        <div class="card  card-team h-100">
                             <div style="text-align: center;">
                                 <img src="./src/img/nosotros/AlexisSanchez.jpeg"
                                     style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
@@ -65,8 +68,8 @@
                     </div>
 
                     <!-- 2 Bryan -->
-                    <div class="col" style="margin-bottom: 1rem;">
-                        <div class="card card__team">
+                    <div class="col" style="margin-bottom: 2rem;">
+                        <div class="card  card-team h-100">
                             <div style="text-align: center;">
                                 <img src="./src/img/nosotros/BryanMartinez.jpeg"
                                     style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
@@ -87,8 +90,8 @@
                     </div>
 
                     <!-- 3 Carlos -->
-                    <div class="col" style="margin-bottom: 1rem;">
-                        <div class="card card__team">
+                    <div class="col" style="margin-bottom: 2rem;">
+                        <div class="card  card-team h-100">
                             <div style="text-align: center;">
                                 <img src="./src/img/nosotros/JuanCarlos.jpeg"
                                     style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
@@ -110,8 +113,8 @@
                     </div>
 
                     <!-- 4 Ignacio -->
-                    <div class="col" style="margin-bottom: 1rem;">
-                        <div class="card card__team">
+                    <div class="col" style="margin-bottom: 2rem;">
+                        <div class="card  card-team h-100">
                             <div style="text-align: center;">
                                 <img src="./src/img/nosotros/CarlosZepeda.jpeg"
                                     style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
@@ -133,8 +136,8 @@
                     </div>
 
                     <!-- 5 Luis-->
-                    <div class="col" style="margin-bottom: 1rem;">
-                        <div class="card card__team">
+                    <div class="col" style="margin-bottom: 2rem;">
+                        <div class="card  card-team h-100">
                             <div style="text-align: center;">
                                 <img src="./src/img/nosotros/JuanAristeo.jpeg"
                                     style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
@@ -155,8 +158,8 @@
                         </div>
                     </div>
                     <!-- 6 Roberto Rivas -->
-                    <div class="col" style="margin-bottom: 1rem;">
-                        <div class="card card__team">
+                    <div class="col" style="margin-bottom: 2rem;">
+                        <div class="card  card-team h-100">
                             <div style="text-align: center;">
                                 <img src="./src/img/nosotros/RobertoRivas.jpeg"
                                     style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
@@ -182,9 +185,10 @@
     </main>
 
     <!-- ================= FOOTER ============== -->
-    <div class="footerFinal" id="footer"></div>
-
-    <!--Funcionalidad Menu de Hamburguesa-->
+    <footer class="text-center text-lg-center justify-content-center d-flex" id="footer"></footer>
+    
+    <!-- ================= JS ============== -->
+    <!--Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
