--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
         rel="stylesheet">
     <!-- css interno -->
     <link rel="stylesheet" href="./css/main.css">
+
     <!-- Logo -->
     <link rel="shortcut icon" href="./src/img/logos/kotomitl3.png" type="image/x-icon">
+
+
 </head>
 
 <body>
@@ -28,38 +31,36 @@
     <!-- ================= CONTENIDO ============== -->
     <main class="container mb-5">
         <section>
-            <div id="carousel" class="carousel slide">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                        class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
-                </div>
+            <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel" data-bs-touch="true">
                 <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="./src/img/home/Kotomitl.png" class="d-block w-100" alt="...">
+                    <div class="carousel-item active" data-bs-interval="2500">
+                        <img src="./src/img/home/KotomitlCarrusel.png" class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item">
-                        <img src="./src/img/home/Kotomitl.png" class="d-block w-100" alt="...">
+                    <div class="carousel-item" data-bs-interval="2500">
+                        <img src="./src/img/home/KotomitlCarrusel2.png" class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item">
-                        <img src="./src/img/home/Kotomitl.png" class="d-block w-100" alt="...">
+                    <div class="carousel-item" data-bs-interval="2500">
+                        <img src="./src/img/home/KotomitlCarrusel3.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="2500">
+                        <img src="./src/img/home/KotomitlCarrusel4.png" class="d-block w-100" alt="...">
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
                     data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
                     data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
         </section>
+        <hr class="featurette-divider">
+
+<h1 class="featurette-heading fw-bold lh-1 text-focus-in">Estilo y orgullo de México</h1>
         <hr class="featurette-divider">
         <section class="container">
             <div class="title">
@@ -78,12 +79,17 @@
                         </div>
                         <div class="card-body">
                             <h2 class="fw-normal">Femenina</h2>
-                            <p class="card-text" style="text-align: justify;">Lorem ipsum, dolor sit amet consectetur
+                            <p class="card-text" style="text-align: justify;">Lorem ipsum, dolor sit amet
+                                consectetur
                                 adipisicing elit. Eum nemo veniam quisquam ullam.</p>
                         </div>
                         <div class="card-footer border-top-0 text-center">
-                            <button type="button" class="btn btn-warning"><span class="texto_boton">Ver más</span>
-                                <span><i class="bi bi-arrow-right home__icon"></i></span></button>
+                            <button type="button" class="btn btn-warning">
+                                <a href="./productos.html" style="text-decoration: none; color:#353028;">
+                                    <span class="texto_boton">Ver más</span>
+                                    <span><i class="bi bi-arrow-right home__icon"></i></span>
+                                </a>
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -96,12 +102,17 @@
                         </div>
                         <div class="card-body">
                             <h2 class="fw-normal">Infantil</h2>
-                            <p class="card-text" style="text-align: justify;">Lorem ipsum, dolor sit amet consectetur
+                            <p class="card-text" style="text-align: justify;">Lorem ipsum, dolor sit amet
+                                consectetur
                                 adipisicing elit. Eum nemo veniam quisquam ullam.</p>
                         </div>
                         <div class="card-footer border-top-0 text-center">
-                            <button type="button" class="btn btn-warning"><span class="texto_boton">Ver más</span>
-                                <span><i class="bi bi-arrow-right home__icon"></i></span></button>
+                            <button type="button" class="btn btn-warning">
+                                <a href="./productos.html" style="text-decoration: none; color:#353028;">
+                                    <span class="texto_boton">Ver más</span>
+                                    <span><i class="bi bi-arrow-right home__icon"></i></span>
+                                </a>
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -114,12 +125,17 @@
                         </div>
                         <div class="card-body">
                             <h2 class="fw-normal">Masculina</h2>
-                            <p class="card-text" style="text-align: justify;">Lorem ipsum, dolor sit amet consectetur
+                            <p class="card-text" style="text-align: justify;">Lorem ipsum, dolor sit amet
+                                consectetur
                                 adipisicing elit. Eum nemo veniam quisquam ullam.</p>
                         </div>
                         <div class="card-footer border-top-0 text-center">
-                            <button type="button" class="btn btn-warning"><span class="texto_boton">Ver más</span>
-                                <span><i class="bi bi-arrow-right home__icon"></i></span></button>
+                            <button type="button" class="btn btn-warning">
+                                <a href="./productos.html" style="text-decoration: none; color:#353028;">
+                                    <span class="texto_boton">Ver más</span>
+                                    <span><i class="bi bi-arrow-right home__icon"></i></span>
+                                </a>
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -128,16 +144,35 @@
         <hr class="featurette-divider">
         <div class="row featurette">
             <div class="col-md-7">
-                <h2 class="featurette-heading fw-normal lh-1">First featurette heading. 
+                <h2 class="featurette-heading fw-bold lh-1 ">Valoramos a nuestras artesanas y artesanos de México.
                     <br>
-                    <span class="text-body-secondary">It’ll blow your mind.</span></h2>
-                <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting
-                    prose here.</p>
+                </h2>
+                <p class="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti aut, mollitia odit
+                    praesentium suscipit neque eius eos ducimus, possimus explicabo expedita maxime ipsam facere sit sed
+                    reprehenderit illum. Officia, accusamus.</p>
+
+                <ul style="margin-top:3rem; margin-bottom: 3rem;">
+                    <li style="font-size: 1.6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+                    <li style="font-size: 1.6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+                    <li style="font-size: 1.6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+                </ul>
             </div>
             <div class="col-md-5">
-                <img src="./src/img/home/img4.jpg" alt="" width="100%" height="auto">
+                <img src="./src/img/home/img4.jpg" class="rounded" alt="" width="100%" height="auto">
             </div>
-        </div>
+            <hr class="featurette-divider">
+            <div class="row featurette">
+                <div class="col-md-4">
+                    <img src="./src/img/home/img8.jpg" class="rounded" alt="" width="100%" height="auto">
+                </div>
+                <div class="col-md-8">
+                    <h2 class="featurette-heading fw-bold lh-1">Apoyo a los proyectos productivos de los artesanos<br>
+                    </h2>
+
+                    <p class="">Some great placeholder content for the first featurette here. Imagine some exciting
+                        prose here.</p>
+                </div>
+            </div>
     </main>
 
     <!-- ================= FOOTER ============== -->
@@ -145,10 +180,9 @@
 
     <!-- ================= JS ============== -->
     <!--Bootstrap-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
-
     <!---JS Nabvar & Footer--->
     <script src="./js/navfooter.js"></script>
 </body>
